--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "handlebars": "^2.0.0",
     "js-yaml": "^3.2.5",
     "moment": "^2.9.0",
-    "stylus": "0.49.3",
-    "to-slug": "0.0.0"
+    "slugg": "^1.0.0",
+    "stylus": "0.49.3"
   }
 }
