--- a/data/assignments.yml
+++ b/data/assignments.yml
@@ -25,12 +25,12 @@ Submit link: "https://newclasses.nyu.edu/portal"
   Due: 2015-03-22
   PDF: {hw4.pdf: "http://davidrosenberg.github.io/mlcourse/Homework/hw4-kernels/hw4.pdf"}
   ZIP: {hw4.zip: "http://davidrosenberg.github.io/mlcourse/Homework/hw4.zip"}
-# -
-#   Label: Homework 5
-#   Description: Trees and Ensemble Methods
-#   Due: 2015-03-25
-#   PDF: {hw5.pdf: "homework/hw5.pdf"}
-#   ZIP: {hw5.zip: "homework/hw5.zip"}
+-
+  Label: Homework 5
+  Description: Trees and Ensemble Methods
+  Due: 2015-04-04
+  PDF: {hw5.pdf: "http://davidrosenberg.github.io/mlcourse/Homework/hw4-boosting/hw4.pdf"}
+  ZIP: {hw5.zip: "http://davidrosenberg.github.io/mlcourse/Homework/hw4.zip"}
 # -
 #   Label: Homework 6
 #   Description: Midterm Review
