--- a/data/assignments.yml
+++ b/data/assignments.yml
@@ -37,15 +37,9 @@ Submit link: "https://newclasses.nyu.edu/portal"
   Due: 2016-04-11
   PDF: {hw6.pdf: "http://davidrosenberg.github.io/mlcourse/Homework/hw6-multiclass/hw6.pdf"}
   ZIP: {hw6.zip: "http://davidrosenberg.github.io/mlcourse/Homework/hw6.zip"}
-# -
-#   Label: Homework 6
-#   Description: Midterm Review
-#   Due: 2016-04-10
-#   PDF: {hw6.pdf: "homework/hw6.pdf"}
-#   ZIP: {hw6.zip: "homework/hw6.zip"}
-# -
-#   Label: Homework 7
-#   Description: Tikhonov, Ivanov, Square Hinge, and GLMs
-#   Due: 2016-04-21
-#   PDF: {hw7.pdf: "homework/hw7.pdf"}
-#   ZIP: {hw7.zip: "homework/hw7.zip"}
+-
+  Label: Homework 7
+  Description: Bayesian Methods and the Beta/Binomial Model
+  Due: 2016-05-10
+  PDF: {hw7.pdf: "https://davidrosenberg.github.io/mlcourse/Homework/hw7-bayesian/hw7.pdf"}
+  ZIP: {hw7.zip: "https://davidrosenberg.github.io/mlcourse/Homework/hw7.zip"}
